added mongo to docker-compose
